--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  outline: none;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+
+  margin: 0;
+  padding: 0;
+
+  app-root {
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+
+    .alert {
+      display: flex;
+      height: 55px;
+    }
+
+    .page-container {
+      display: flex;
+      flex-grow: 1;
+    }
+  }
+}
