--- a/src/app/views/welcome/welcome.component.html
+++ b/src/app/views/welcome/welcome.component.html
@@ -1,7 +1,86 @@
+<div class="sign-up-component h-100 m-0 p-3">
+  <div class="container-fluid h-100">
+    <div class="row align-items-center justify-content-center h-100">
+      <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col sign-up-header text-center p-4">
+              <h5 class="m-0"> {{ 'Novo Atendimento' | uppercase }} </h5>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row ui-fluid">
+            <div class="col">
+              <div class="form-group">
+                <label for="local" class="d-none"> <strong>Local</strong></label>
+                <input pInputText id="local" type="local" class="form-control" aria-describedby="local-help"
+                  placeholder="Local">
+                <small id="local-help" class="d-none form-text text-muted">
+                  Preencha com o local do atendimento.
+                </small>
+              </div>
+              <div class="form-group">
+                <label for="atendimento" class="d-none"><strong>Atendimento</strong></label>
+                <input pInputText id="atendimento" type="atendimento" class="form-control"
+                  aria-describedby="atendimento-help" placeholder="Tipo de Atendimento">
+                <small id="atendimento-help" class="d-none form-text text-muted">
+                  Preencha com o tipo de atendimento realizado.
+                </small>
+              </div>
+              <div class="form-group">
+                <label for="operadora" class="d-none"><strong>Operadora</strong></label>
+                <input pInputText id="operadora" type="operadora" class="form-control" aria-describedby="operadora-help"
+                  placeholder="Operadora">
+                <small id="operadora-help" class="d-none form-text text-muted">
+                  Preencha com a operadora.
+                </small>
+              </div>
+
+              <div class="form-group">
+                <div class="input-group mb-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+                  </div>
+                  <div class="custom-file">
+                    <input type="file" class="custom-file-input" id="inputGroupFile01" (change)="readURL($event);"
+                      aria-describedby="inputGroupFileAddon01">
+                    <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                  </div>
+                </div>
+                <div class="container-fluid">
+                  <div class="row">
+                    <picture>
+                      <source [srcset]="image || defaultImage" type="image/svg+xml">
+                      <img [src]="image || defaultImage" class="img-fluid img-thumbnail" alt="...">
+                    </picture>
+                    <!-- <img class="img-thumbnail"
+                      [src]="image || 'https://s3.amazonaws.com/cdn.leiturinha.com.br/blog/uploads/2018/09/livro-imagem.jpg'"
+                      alt="your image" /> -->
+
+                  </div>
+                </div>
+              </div>
+              <button pButton type="button" class="ui-button-success" label="Criar"></button>
+              <hr>
+              <div class="form-group text-center">
+                <small class="form-text text-muted">
+                  Não tem uma conta? <a [routerLink]="['/sign-up']">Registrar-se</a>
+                </small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <input type="file" accept="image/*" capture="camera" (change)="readURL($event);">
 
 
-<img id="blah" [src]="imageSrc || 'http://placehold.it/180'" alt="your image" />
+<img id="blah" [src]="image || 'https://s3.amazonaws.com/cdn.leiturinha.com.br/blog/uploads/2018/09/livro-imagem.jpg'"
+  alt="your image" />
 
 
 <a [routerLink]="['/sign-in']">Entrar</a>
