ajustes de layout

--- a/src/app/views/sign-in/sign-in.component.html
+++ b/src/app/views/sign-in/sign-in.component.html
@@ -14,7 +14,7 @@
             <div class="col">
               <div class="form-group">
                 <label for="email" class="d-none"> <strong>Email</strong></label>
-                <input pInputText id="email" type="email" class="form-control" aria-describedby="email-help"
+                <input pInputText [(ngModel)]="email" id="email" type="email" class="form-control" aria-describedby="email-help"
                   placeholder="Seu Email">
                 <small id="email-help" class="d-none form-text text-muted">
                   We'll never share your email with anyone else.
@@ -22,13 +22,13 @@
               </div>
               <div class="form-group">
                 <label for="password" class="d-none"><strong>Senha</strong></label>
-                <input pInputText id="password" type="password" class="form-control" aria-describedby="password-help"
+                <input pInputText [(ngModel)]="password" id="password" type="password" class="form-control" aria-describedby="password-help"
                   placeholder="Senha">
                 <small id="password-help" class="form-text text-muted">
                   <a href="#">Esqueceu sua senha?</a>
                 </small>
               </div>
-              <button pButton type="button" label="Entrar"></button>
+              <button pButton type="button" label="Entrar" (click)="signin()"></button>
               <hr>
               <div class="form-group text-center">
                 <small class="form-text text-muted">
