--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,19 +2,34 @@
   Nova versão está disponível! <a href="#" (click)="refresh()">Refresh</a>
 </div>
 <div class="page-container overflow-hidden" [ngClass]="{'h-100': !updateAvailable}">
-  <!-- <app-sidebar class="sidebar-menu"></app-sidebar> -->
-  <!-- <app-navbar class="d-block header-area"></app-navbar> -->
-  <div class="main-content position-relative overflow-auto w-100 h-100">
-    <div class="content overflow-hidden w-100 h-100">
-      <div class="container-fluid m-0 p-0 w-100 h-100">
-        <div class="row m-0 p-0 w-100 h-100">
-          <div class="col-sm-12 col-sm-9 col-lg-12 m-0 p-0 bg-light h-100 overflow-auto">
-            <div class="container-fluid m-0 p-0 w-100 h-100">
-              <router-outlet></router-outlet>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
+
+<!-- <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+        <img src="..." class="rounded mr-2" alt="...">
+        <strong class="mr-auto">Bootstrap</strong>
+        <small class="text-muted">just now</small>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="toast-body">
+        See? Just like this.
+    </div>
+</div>
+
+<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+        <img src="..." class="rounded mr-2" alt="...">
+        <strong class="mr-auto">Bootstrap</strong>
+        <small class="text-muted">2 seconds ago</small>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="toast-body">
+        Heads up, toasts will stack automatically
+    </div>
+</div> -->
+
