--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,29 +1,114 @@
 /* You can add global styles to this file, and also import other style files */
+
 * {
   outline: none;
+  font-family: "IBM Plex Sans", sans-serif;
+
+  &:focus {
+    outline: none !important;
+  }
+}
+:focus {
+  outline: 0 !important;
 }
 
 html,
 body {
   width: 100%;
   height: 100%;
-
   margin: 0;
   padding: 0;
-
   app-root {
     height: 100%;
     display: flex;
     flex-flow: column;
-
     .alert {
       display: flex;
       height: 55px;
     }
+  }
+}
 
-    .page-container {
-      display: flex;
-      flex-grow: 1;
+.page-container {
+  background-color: #f7f7f8;
+}
+
+bg-dark {
+  background-color: #2b323a !important;
+}
+
+.breadcrumb-style1,
+.breadcrumb-style2,
+.breadcrumb-style3 {
+  border-radius: 0;
+  background-color: transparent;
+  // padding: 0;
+}
+
+.breadcrumb-style1 .breadcrumb-item.active,
+.breadcrumb-style2 .breadcrumb-item.active,
+.breadcrumb-style3 .breadcrumb-item.active {
+  color: #0168fa;
+}
+
+.breadcrumb-style1 .breadcrumb-item,
+.breadcrumb-style2 .breadcrumb-item,
+.breadcrumb-style3 .breadcrumb-item {
+  font-size: 12px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+}
+
+// table
+.table {
+  thead {
+    th {
+      font-size: 14px;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      text-transform: uppercase;
     }
   }
+  tbody {
+    tr {
+      td {
+        font-size: 14px;
+        font-weight: 400;
+        letter-spacing: 0.5px;
+      }
+    }
+  }
+}
+
+//
+.btn {
+  span {
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+  }
+}
+
+$bg-primary: #17a2b8;
+$bg-primary-darker: #138496;
+
+//
+//
+//
+.ui-inputtext {
+  border-color: #ccc !important;
+}
+
+.w-0 {
+  max-width: 0px !important;
+  min-width: 0px !important;
+  width: 0px !important;
+}
+
+.app-text {
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
 }
