--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -21,6 +21,13 @@
                       </a>
                     </li>
                     <li class="nav-item">
+                      <a class="nav-link" [routerLink]="['/exams/new']">
+                        <i class="fas fa-plus-square" data-fa-transform="grow-6"></i>
+                        <p>Novo Atendimento</p>
+                      </a>
+                    </li>
+                    <hr>
+                    <li class="nav-item">
                       <a class="nav-link">
                         <i class="fas fa-book-medical" data-fa-transform="grow-6"></i>
                         <p>Atendimentos</p>
@@ -44,7 +51,6 @@
                         <p>Locais de Atendimento</p>
                       </a>
                     </li>
-
                     <li>
                       <a class="nav-link" href="./maps.html">
                         <i class="fas fa-file-alt"></i>
@@ -61,7 +67,7 @@
                   </ul>
                 </div>
               </div>
-              <div id="sidebar-mobile" class="sidebar position-fixedd-flex d-md-none bg-info collapsed">
+              <div id="sidebar-mobile" class="sidebar position-fixed d-flex d-md-none bg-info collapsed">
                 <div class="sidebar-wrapper">
                   <ul class="nav">
                     <li class="nav-item d-none">
@@ -70,6 +76,13 @@
                         <p>Dashboard</p>
                       </a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" [routerLink]="['/exams/new']">
+                        <i class="fas fa-plus-square" data-fa-transform="grow-6"></i>
+                        <p>Novo Atendimento</p>
+                      </a>
+                    </li>
+                    <hr>
                     <li class="nav-item">
                       <a class="nav-link">
                         <i class="fas fa-book-medical" data-fa-transform="grow-6"></i>
