--- a/src/app/views/dashboard/exams/exams-create/exams-create.component.html
+++ b/src/app/views/dashboard/exams/exams-create/exams-create.component.html
@@ -12,7 +12,21 @@
     <div class="card p-0">
       <div class="card-body">
         <div class="row">
-          <div class="offset-10 col-2 offset-md-9 col-md-3">
+          <div class="col-2 col-md-3">
+            <button *ngIf="currentStep > 0" class="btn btn-sm btn-info h-100 float-left" (click)="previousStep()"
+              style="min-height: 35px;">
+              <span class="d-block d-md-none">
+                <i class="fas fa-arrow-left"></i>
+              </span>
+              <span class="d-none d-md-block d-lg-none">
+                <i class="fas fa-arrow-left"></i>&nbsp;&nbsp;Voltar
+              </span>
+              <span class="d-none d-lg-block">
+                <i class="fas fa-arrow-left"></i>&nbsp;&nbsp;Voltar
+              </span>
+            </button>
+          </div>
+          <div class="offset-8 col-2 offset-md-6 col-md-3">
             <button class="btn btn-sm btn-info h-100 float-right" style="min-height: 35px;">
               <span class="d-block d-md-none">
                 <i class="fas fa-save"></i>
@@ -28,51 +42,20 @@
         </div>
       </div>
       <hr class="m-0">
-      <div class="card-body">
-        <div class="row ui-fluid">
-          <div class="col">
-            <div class="form-group">
-              <label for="local" class="d-none"> <strong>Local</strong></label>
-              <input pInputText id="local" type="local" class="form-control" aria-describedby="local-help"
-                placeholder="Local">
-              <small id="local-help" class="d-none form-text text-muted">
-                Preencha com o local do atendimento.
-              </small>
-            </div>
-            <div class="form-group">
-              <label for="atendimento" class="d-none"><strong>Atendimento</strong></label>
-              <input pInputText id="atendimento" type="atendimento" class="form-control"
-                aria-describedby="atendimento-help" placeholder="Tipo de Atendimento">
-              <small id="atendimento-help" class="d-none form-text text-muted">
-                Preencha com o tipo de atendimento realizado.
-              </small>
-            </div>
-            <div class="form-group">
-              <label for="operadora" class="d-none"><strong>Operadora</strong></label>
-              <input pInputText id="operadora" type="operadora" class="form-control" aria-describedby="operadora-help"
-                placeholder="Operadora">
-              <small id="operadora-help" class="d-none form-text text-muted">
-                Preencha com a operadora.
-              </small>
-            </div>
-
-            <div class="form-group">
-              <div class="container-fluid">
-                <div class="row">
-                  <input id="file-input" class="d-none" type="file" (change)="readURL($event);">
-                  <label for="file-input" class="w-100 text-center">
-                    <picture>
-                      <source [srcset]="image || defaultImage" type="image/svg+xml">
-                      <img [src]="image || defaultImage" class="img-fluid img-thumbnail" alt="...">
-                    </picture>
-                  </label>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div *ngIf="currentStep == 0" class="card-body">
+        <app-exam-location-create-component [location]="location" (locationSelected)="onLocationSelected($event)">
+        </app-exam-location-create-component>
+      </div>
+      <div *ngIf="currentStep == 1" class="card-body">
+        <app-exam-type-create-component [examType]="examType" (examTypeSelected)="onExamTypeSelected($event)">
+        </app-exam-type-create-component>
+      </div>
+      <div *ngIf="currentStep == 2" class="card-body">
+        <app-exam-provider-create-component [provider]="provider" (providerSelected)="onProviderSelected($event)">
+        </app-exam-provider-create-component>
       </div>
       <div class="card-body">
+
         <!-- <a href="#" class="card-link">Card link</a>
         <a href="#" class="card-link">Another link</a> -->
       </div>
@@ -85,3 +68,48 @@
 </nav> -->
   </div>
 </div>
+
+
+<!-- body alternative -->
+<!-- <div class="row ui-fluid">
+  <div class="col">
+    <div class="form-group">
+      <label for="local" class="d-none"> <strong>Local</strong></label>
+      <input pInputText id="local" type="local" class="form-control" aria-describedby="local-help"
+        placeholder="Local">
+      <small id="local-help" class="d-none form-text text-muted">
+        Preencha com o local do atendimento.
+      </small>
+    </div>
+    <div class="form-group">
+      <label for="atendimento" class="d-none"><strong>Atendimento</strong></label>
+      <input pInputText id="atendimento" type="atendimento" class="form-control"
+        aria-describedby="atendimento-help" placeholder="Tipo de Atendimento">
+      <small id="atendimento-help" class="d-none form-text text-muted">
+        Preencha com o tipo de atendimento realizado.
+      </small>
+    </div>
+    <div class="form-group">
+      <label for="operadora" class="d-none"><strong>Operadora</strong></label>
+      <input pInputText id="operadora" type="operadora" class="form-control" aria-describedby="operadora-help"
+        placeholder="Operadora">
+      <small id="operadora-help" class="d-none form-text text-muted">
+        Preencha com a operadora.
+      </small>
+    </div>
+
+    <div class="form-group">
+      <div class="container-fluid">
+        <div class="row">
+          <input id="file-input" class="d-none" type="file" (change)="readURL($event);">
+          <label for="file-input" class="w-100 text-center">
+            <picture>
+              <source [srcset]="image || defaultImage" type="image/svg+xml">
+              <img [src]="image || defaultImage" class="img-fluid img-thumbnail" alt="...">
+            </picture>
+          </label>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> -->
