--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,12 +5,12 @@
         <div class="d-flex">
           <div class="text-center" style="width: 280px;">
             <!-- <app-brand src="https://ottimizza.com.br/images/ottimizza.png" class="text-center"> -->
-            <app-brand src="assets/images/logo.png" class="text-center">
+            <app-brand src="assets/images/logo.jpg" class="text-center">
             </app-brand>
           </div>
         </div>
         <div class="d-flex flex-grow-1 align-items-center">
-          <div class="col">
+          <div class="col p-0">
             <button type="button" (click)="toggleSidebar()" class="float-right float-md-left btn btn-link text-dark">
               <!-- <span class="navbar-toggler-icon"></span> -->
               <i class="fas fa-bars" style="font-size: 22px;"></i>
