--- a/src/app/views/dashboard/exams/exam-type/exam-type.component.html
+++ b/src/app/views/dashboard/exams/exam-type/exam-type.component.html
@@ -4,9 +4,13 @@
       <label class="text-muted text-uppercase"><strong>Tipo de Atendimento</strong></label>
     </div>
     <div class="form-group">
-      <input pInputText id="local" type="text" class="form-control" placeholder="Informe o Tipo de Atendimento..."
-        [(ngModel)]="description" (ngModelChange)="findExamTypes(description)" />
-      <small class="form-text text-muted"> Exemplo: Exame, Consulta etc... </small>
+      <div class="ui-inputgroup">
+        <input pInputText id="local" type="text" class="form-control" placeholder="Informe o Tipo de Atendimento..."
+          [(ngModel)]="description" (ngModelChange)="findExamTypes(description)" />
+        <button pButton type="button" icon="pi pi-times" class="button-clear"
+          (click)="description = ''; findExamTypes(description);"></button>
+      </div>
+      <small *ngIf="noResults" class="form-text text-muted"> Exemplo: Exame, Consulta etc... </small>
     </div>
 
     <div *ngIf="!noResults" class="container text-center pt-3">
@@ -19,9 +23,9 @@
     <div *ngIf="noResults" class="container text-center pt-3">
       <div class="row mb-3">
         <div class="offset-md-2 col-12 col-md-8 ">
-          <p class="text-muted">Nenhum resultado encontrado!</p>
+          <p class="text-muted">Tipo de Atendimento não existe!</p>
           <button class="btn btn-info w-100 py-3" (click)="createExamType()">
-            Cadastrar
+            Salvar
           </button>
         </div>
       </div>
