--- a/src/app/views/dashboard/exams/exams-create/exams-create.component.html
+++ b/src/app/views/dashboard/exams/exams-create/exams-create.component.html
@@ -1,13 +1,12 @@
 <div class="p-3">
   <div class="container">
-    <div>
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb breadcrumb-style1 p-0 p-md-2">
-          <li class="breadcrumb-item"><a [routerLink]="['/']">Dashboard</a></li>
-          <li class="breadcrumb-item"><a [routerLink]="['/exams']">Atendimentos</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Novo</li>
-        </ol>
-      </nav>
+    <div class="w-100 mb-2" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+      <small class="float-right">
+        {{returnDateNow() | date:'dd/MM/yyyy'}}
+      </small>
+      <strong>
+        {{user.fullname}}
+      </strong>
     </div>
     <div class="card p-0">
       <div class="card-body">
@@ -27,20 +26,6 @@
               </div>
             </div>
           </div>
-          <!-- <div *ngIf="currentStep > 0" class="col-2 col-md-3"> -->
-          <!--             
-            <button class="btn btn-sm btn-info h-100 float-left" (click)="previousStep()" style="min-height: 35px;">
-              <span class="d-block d-md-none">
-                <i class="fas fa-arrow-left"></i>
-              </span>
-              <span class="d-none d-md-block d-lg-none">
-                <i class="fas fa-arrow-left"></i>&nbsp;&nbsp;Voltar
-              </span>
-              <span class="d-none d-lg-block">
-                <i class="fas fa-arrow-left"></i>&nbsp;&nbsp;Voltar
-              </span>
-            </button> -->
-          <!-- </div> -->
           <div *ngIf="currentStep == 3" class="offset-8 col-2 offset-md-6 col-md-3 d-none">
             <button class="btn btn-sm btn-info h-100 float-right" style="min-height: 35px;">
               <span class="d-block d-md-none">
@@ -71,69 +56,13 @@
       </div>
       <div *ngIf="currentStep == 3" class="card-body">
         <app-exam-health-plan-component [healthPlan]="healthPlan" [provider]="provider"
-          (providerSelected)="onHealthPlanSelected($event)">
+          (healthPlanSelected)="onHealthPlanSelected($event)">
         </app-exam-health-plan-component>
       </div>
-      <div *ngIf="currentStep == 4" class="card-body">
-        <app-exam-details-create-component>
+      <div *ngIf="currentStep == 4" class="card-body pb-0">
+        <app-exam-details-create-component (saveExam)="save($event)">
         </app-exam-details-create-component>
       </div>
-      <div class="card-body">
-
-        <!-- <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a> -->
-      </div>
     </div>
-    <!-- <nav aria-label="breadcrumb">
-  <ol class="breadcrumb breadcrumb-style1 mg-b-10">
-    <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Sales Monitoring</li>
-  </ol>
-</nav> -->
   </div>
 </div>
-
-
-<!-- body alternative -->
-<!-- <div class="row ui-fluid">
-  <div class="col">
-    <div class="form-group">
-      <label for="local" class="d-none"> <strong>Local</strong></label>
-      <input pInputText id="local" type="local" class="form-control" aria-describedby="local-help"
-        placeholder="Local">
-      <small id="local-help" class="d-none form-text text-muted">
-        Preencha com o local do atendimento.
-      </small>
-    </div>
-    <div class="form-group">
-      <label for="atendimento" class="d-none"><strong>Atendimento</strong></label>
-      <input pInputText id="atendimento" type="atendimento" class="form-control"
-        aria-describedby="atendimento-help" placeholder="Tipo de Atendimento">
-      <small id="atendimento-help" class="d-none form-text text-muted">
-        Preencha com o tipo de atendimento realizado.
-      </small>
-    </div>
-    <div class="form-group">
-      <label for="operadora" class="d-none"><strong>Operadora</strong></label>
-      <input pInputText id="operadora" type="operadora" class="form-control" aria-describedby="operadora-help"
-        placeholder="Operadora">
-      <small id="operadora-help" class="d-none form-text text-muted">
-        Preencha com a operadora.
-      </small>
-    </div>
-
-    <div class="form-group">
-      <div class="container-fluid">
-        <div class="row">
-          <input id="file-input" class="d-none" type="file" (change)="readURL($event);">
-          <label for="file-input" class="w-100 text-center">
-            <picture>
-              <source [srcset]="image || defaultImage" type="image/svg+xml">
-              <img [src]="image || defaultImage" class="img-fluid img-thumbnail" alt="...">
-            </picture>
-          </label>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
