--- a/src/app/views/dashboard/exams/exam-location/exam-location.component.html
+++ b/src/app/views/dashboard/exams/exam-location/exam-location.component.html
@@ -1,9 +1,6 @@
 <div class="row ui-fluid">
   <div class="col">
     <div class="form-group">
-      <label class="text-muted text-uppercase"><strong>Local de Atendimento</strong></label>
-    </div>
-    <div class="form-group">
       <div class="ui-inputgroup">
         <input pInputText id="local" type="text" class="form-control" placeholder="Informe o Local de Atendimento..."
           [(ngModel)]="description" (ngModelChange)="findLocations(description)" />
@@ -23,7 +20,7 @@
     <div *ngIf="noResults" class="container text-center pt-3">
       <div class="row mb-3">
         <div class="offset-md-2 col-12 col-md-8 ">
-          <p class="text-muted">Local de Atendimento não existe!</p>
+          <p class="text-muted"> "{{description}}" não existe! Deseja salvá-lo?</p>
           <button (click)="createLocation()" class="btn btn-info w-100 py-3">
             Salvar
           </button>
