--- a/src/app/views/dashboard/exams/exam-provider/exam-provider.component.html
+++ b/src/app/views/dashboard/exams/exam-provider/exam-provider.component.html
@@ -1,9 +1,6 @@
 <div class="row ui-fluid">
   <div class="col">
     <div class="form-group">
-      <label class="text-muted text-uppercase"><strong>Operadora</strong></label>
-    </div>
-    <div class="form-group">
       <div class="ui-inputgroup">
         <input pInputText id="local" type="text" class="form-control" placeholder="Informe o nome da Operadora..."
           [(ngModel)]="description" (ngModelChange)="findProviders(description)" />
@@ -23,7 +20,7 @@
     <div *ngIf="noResults" class="container text-center pt-3">
       <div class="row mb-3">
         <div class="offset-md-2 col-12 col-md-8 ">
-          <p class="text-muted">Operadora não existe!</p>
+          <p class="text-muted"> "{{description}}" não existe! Deseja salvá-la?</p>
           <button (click)="createProvider()" class="btn btn-info w-100 py-3">
             Salvar
           </button>
