--- a/src/app/views/dashboard/exams/exam-details/exam-details.component.html
+++ b/src/app/views/dashboard/exams/exam-details/exam-details.component.html
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="form-group w-100 text-center">
             <input id="file-input" class="d-none" type="file" (change)="readURL($event);">
-            <label for="file-input" class="w-100 text-center">
+            <label for="file-input" class="w-100 text-center m-0">
               <picture>
                 <source [srcset]="image || defaultImage" type="image/svg+xml">
                 <img [src]="image || defaultImage" class="img-fluid img-thumbnail" alt="...">
@@ -15,9 +15,10 @@
           </div>
         </div>
         <div class="row justify-content-end">
-          <button class="btn btn-sm btn-info h-100 float-right" style="min-height: 35px;" (click)="save()">
+          <button class="btn btn-sm btn-info h-100 float-right" style="min-height: 35px;" (click)="loadingImage ? '' : save()">
             <span>
               <i class="fas fa-save"></i>&nbsp;&nbsp;Salvar Atendimento
+              <i class="fas fa-spinner fa-pulse" *ngIf="loadingImage"></i>
             </span>
           </button>
         </div>
