Added filters to find exams

--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
                     </li>
                     <hr>
                     <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-                      <a class="nav-link">
+                      <a class="nav-link" [routerLink]="['/exams']">
                         <i class="fas fa-book-medical" data-fa-transform="grow-6"></i>
                         <p>Atendimentos</p>
                       </a>
@@ -53,12 +53,12 @@
                       </a>
                     </li>
                     <hr>
-                    <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+                    <!-- <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
                       <a class="nav-link">
                         <i class="fas fa-book-medical" data-fa-transform="grow-6"></i>
                         <p>Atendimentos</p>
                       </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
                       <a class="nav-link" [routerLink]="['/users']">
                         <i class="fas fa-user-md"></i>
