--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,9 @@
 <div *ngIf="updateAvailable" class="alert alert-warning m-0" role="alert">
-  Nova versão está disponível! <a href="#" (click)="refresh()">Refresh</a>
+    Nova versão está disponível! <a href="#" (click)="refresh()">Refresh</a>
 </div>
 <div class="page-container overflow-hidden" [ngClass]="{'h-100': !updateAvailable}">
-  <router-outlet></router-outlet>
+    <a class="bg-info notification-sidebar-toggle" [ngClass]="{'d-none':showFilter}">
+        <i class="fas fa-filter fa-lg filter-icon"></i>
+    </a>
+    <router-outlet></router-outlet>
 </div>
-
-<!-- <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header">
-        <img src="..." class="rounded mr-2" alt="...">
-        <strong class="mr-auto">Bootstrap</strong>
-        <small class="text-muted">just now</small>
-        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    <div class="toast-body">
-        See? Just like this.
-    </div>
-</div>
-
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header">
-        <img src="..." class="rounded mr-2" alt="...">
-        <strong class="mr-auto">Bootstrap</strong>
-        <small class="text-muted">2 seconds ago</small>
-        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    <div class="toast-body">
-        Heads up, toasts will stack automatically
-    </div>
-</div> -->
-
